@@ -4,6 +4,7 @@ CHANGELOG
 ClanSphere 2010.0 Final >> 2010-07-XX
 ___________________________________________________________
 
+-> Added web.config example to use mod_rewrite functionality in Microsoft IIS (hajo)
 -> Fixed cups module (spongebob)
 -> Fixed error page for PHP 4 to be shown again (hajo)
 -> Removed a part of the upload htaccess file as it caused some errors (hajo)
